Updated to Premium Articles v4

--- a/config/sync/core.entity_view_display.node.article.full.yml
+++ b/config/sync/core.entity_view_display.node.article.full.yml
@@ -17,7 +17,7 @@ dependencies:
     - datetime
     - layout_builder
     - layout_builder_restrictions
-    - premium_articles_layout
+    - premium_articles
     - premium_layout_builder_restrictions
     - user
 third_party_settings:
