Added Content carousel block

--- a/config/sync/paragraphs.paragraphs_type.accordion_item.yml
+++ b/config/sync/paragraphs.paragraphs_type.accordion_item.yml
@@ -8,5 +8,5 @@ id: accordion_item
 label: 'Accordion Item'
 icon_uuid: null
 icon_default: null
-description: ''
+description: 'Items for an accordion block.'
 behavior_plugins: {  }
