--- a/config/sync/paragraphs.paragraphs_type.link_card.yml
+++ b/config/sync/paragraphs.paragraphs_type.link_card.yml
@@ -6,5 +6,5 @@ id: link_card
 label: 'Link card'
 icon_uuid: null
 icon_default: null
-description: ''
+description: 'Cards for a link box.'
 behavior_plugins: {  }
