--- a/config/sync/filter.format.webform_default.yml
+++ b/config/sync/filter.format.webform_default.yml
@@ -8,4 +8,6 @@ dependencies:
 name: 'Webform (Default) - DO NOT EDIT'
 format: webform_default
 weight: 100
+roles:
+  - authenticated
 filters: {  }
