--- a/config/sync/core.entity_view_display.node.article.full.yml
+++ b/config/sync/core.entity_view_display.node.article.full.yml
@@ -53,6 +53,7 @@ third_party_settings:
         third_party_settings: {  }
   layout_builder_restrictions:
     allowed_block_categories:
+      - Announcements
       - 'Content fields'
       - 'Custom block types'
       - Devel
@@ -65,6 +66,7 @@ third_party_settings:
       - System
       - User
       - Webform
+      - Workspace
       - core
     entity_view_mode_restriction:
       allowed_layouts:
@@ -74,12 +76,11 @@ third_party_settings:
         - layout_article_sidebar_section
         - layout_hero_section
       denylisted_blocks:
-        'Custom block types':
-          - basic
-        'Inline blocks':
-          - 'inline_block:basic'
+        'Custom block types': {  }
+        'Inline blocks': {  }
       allowlisted_blocks: {  }
       restricted_categories:
+        - Announcements
         - 'Content fields'
         - Devel
         - Forms
@@ -90,6 +91,7 @@ third_party_settings:
         - System
         - User
         - Webform
+        - Workspace
         - core
       whitelisted_blocks:
         'Chaos Tools': {  }
@@ -122,6 +124,7 @@ third_party_settings:
               - image
               - quote
               - rte
+              - spacer
               - video
             'Inline blocks':
               - 'inline_block:image'
@@ -133,6 +136,8 @@ third_party_settings:
               - button
             'Inline blocks':
               - 'inline_block:button'
+              - 'inline_block:spacer'
+              - 'inline_block:rte'
         layout_hero_section:
           all_regions:
             'Custom block types':
@@ -156,6 +161,14 @@ third_party_settings:
             'Inline blocks':
               - 'inline_block:appetizer'
               - 'inline_block:hero'
+      restricted_categories:
+        layout_article_sidebar_section:
+          content:
+            - Announcements
+            - Workspace
+          sidebar:
+            - Announcements
+            - Workspace
     unique_section_restriction:
       unique_layouts:
         - layout_article_sidebar_section
