Config changes to layout builder to show block add/update/remove in layout bilder iframe

--- a/config/sync/layout_builder_iframe_modal.settings.yml
+++ b/config/sync/layout_builder_iframe_modal.settings.yml
@@ -1,4 +1,7 @@
 _core:
   default_config_hash: XTVwRfo2zQie-qiiScaVM2swh-XUoLmG_PbwvfclVIg
-layout_builder_iframe_routes: {  }
+layout_builder_iframe_routes:
+  - layout_builder.remove_block
+  - layout_builder.add_block
+  - layout_builder.update_block
 custom_routes: {  }
