Theme style, theme and functionality changes

--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/package.json
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/package.json
@@ -101,6 +101,7 @@
     "hoverintent": "^2.2.1",
     "lodash": "^4.17.21",
     "novicell-lazyload": "^2.2.0",
+    "swiper": "^12.0.1",
     "vue": "^2.6.11"
   },
   "babel": {
