Added theme-red as dependency to announcement library

--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/premium.libraries.yml
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/premium.libraries.yml
@@ -114,6 +114,7 @@ announcement:
     dist/components/js/announcement.js: {}
   dependencies:
     - core/drupal
+    - premium/theme-red
 
 article-teaser:
   version: VERSION
