--- a/composer.json
+++ b/composer.json
@@ -173,6 +173,11 @@
                 "webroot/modules/contrib/webform/composer.libraries.json"
             ]
         },
-        "patches": {}
+        "patches": {
+            "drupal/paragraphs": {
+                "(#3090200) Paragraph access check using incorrect revision of its parent, leading to issues editing and viewing paragraphs when content moderation is involved": "https://www.drupal.org/files/issues/2020-07-08/access-controll-issue-3090200-22.patch",
+                "(#2901390) Integrity constraint violation: 1048 Column 'langcode' cannot be null": "https://www.drupal.org/files/issues/2023-07-20/2901390-9-109.patch"
+            }
+        }
     }
 }
