Added Transform API Preview

--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -113,6 +113,7 @@ module:
   toolbar: 0
   transform_api: 0
   transform_api_language: 0
+  transform_api_preview: 0
   transform_api_redirect: 0
   transform_api_responsive_image: 0
   user: 0
