--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         "drupal/hreflang": "^1.0",
         "drupal/imageapi_optimize": "^4.0",
         "drupal/inline_block_title_automatic": "^2.0",
+        "drupal/jwt": "^3.0@dev",
         "drupal/layout_builder_at": "^3.0",
         "drupal/layout_builder_iframe_modal": "^1.3",
         "drupal/layout_builder_modal": "^2.0",
