--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -58,6 +58,10 @@ module:
   image_style_generator: 0
   imageapi_optimize: 0
   inline_block_title_automatic: 0
+  jwt: 0
+  jwt_auth_consumer: 0
+  jwt_auth_issuer: 0
+  key: 0
   language: 0
   layout_builder: 0
   layout_builder_at: 0
