--- a/composer.json
+++ b/composer.json
@@ -90,7 +90,8 @@
         "novicell/styles": "^1.0",
         "oomphinc/composer-installers-extender": "^2.0",
         "vlucas/phpdotenv": "^5.3",
-        "wikimedia/composer-merge-plugin": "^2.0"
+        "wikimedia/composer-merge-plugin": "^2.0",
+        "ext-openssl": "*"
     },
     "require-dev": {
         "drupal/devel": "^5.0",
